public/style/main.css
/* ... */
.post,
.post-edit,
.login-form,
.signup-form {
  display: flex;
  width: 70vw;
  flex-direction: column;
  background-color: rgba(236, 236, 236, 0.652);
  padding: 2rem;
  color: black;
  border-radius: 2rem;
  min-height: 600px;
  justify-content: space-between;

}
.login-wrapper,
.signup-wrapper
{
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 20rem;
  margin-bottom: 20rem;
  gap: 10rem;
}
.login-form,
.signup-form {
  width: 40vw;
  height: 500px;
  min-height: auto;
}
@media only screen and (max-width: 480px){
  .signup-form{
    height: 700px;
    padding: 2rem 1rem;
  }
}

.google-signin-container {
  border: 1px solid white;
  display: flex;
  border-radius: 1.5rem;
  padding: 0.3rem 0.8rem;
}
.google-signin-container a, .divider-container p{
  color: white;
}
.google-signin-container:hover {
  background-color: red;
  cursor: pointer;
  transition: all 1s ease-in-out;
}
.google-signin-container a:hover {
  color: white;
}
@media only screen and (max-width: 480px) {
  .google-signin-container a {
    font-size: 1rem;
  }
  .login-wrapper{
    flex-direction: column;
    gap: 3rem;
  }
}

/* divider line */
.hr-text {
  border: 0;
  line-height: 1em;
  position: relative;
  width: 1.5em;
  height: 300px;
  font-size: 1.2rem;
}

.hr-text::before {
  content: "";
  background-color: bisque;
  position: absolute;
  left: 50%;
  height: 100%;
  width: 2px;
}

.hr-text::after {
  content: attr(data-content);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 7px; 
  border-radius: 3rem;
  color: white;
  background-color: #080b01;
}
@media only  screen and (max-width: 480px) {
  .hr-text{
    width: 90%;
    height: 1rem;
  }
  .hr-text::before{
    width: 100%;
    height: 2px;
    top: 50%;
    left: 0;
  }
}

input:focus,
textarea:focus {
  outline: none;
}
input[type="submit"] {
  font-size: 1rem;
  width: 6rem;
  border-radius: 1rem;
  background-color: #797a71;
  color: white;
  opacity: 1;
}
input[type="submit"]:hover {
  cursor: pointer;
  background-color: #c1ae95;
  transition: all 0.5s ease-in;
}
.cancel-btn {
  height: 50px;
  width: 6rem;
  font-size: 1rem;
  border-radius: 1rem;
  background-color: white;
  color: #797a71;
  text-align: center;
  padding: 0;
  line-height: 50px;
}
.cancel-btn:hover {
  background-color: #c1ae95;
  color: white;
  border: none;
  transition: all 0.5s ease-in;
}
.form-container form {
  display: flex;
  flex-direction: column;
  width: 70vw;
  gap: 2rem;
  border: 5px solid #797a71;
  padding: 2rem;
  margin-bottom: 10rem;
  border-radius: 2rem;
}
@media only screen and (max-width: 480px) {
  .form-container form {
    width: 90vw;
  }
}
.form-title {
  width: 70vw;
}
textarea {
  height: 200px;
}
footer {
  display: flex;
  height: 50px;
  justify-content: center;
  align-items: center;
  position: absolute;
  width: 100%;
  bottom: 0;
  color: white;
  font-size: 1.2rem;
  background-color: #797a71;
}
/* Navigation */
nav {
  display: flex;
  justify-content: end;
  padding-right: 7rem;
  position: absolute;
  top: 0;
  right: 0;

}
@media only screen and (max-width: 480px) {
  nav {
    padding-bottom: 5rem;
  }
}
.desktop-nav {
  display: flex;
  flex-direction: row;
  align-items: center;
  transition: all 1s ease-in-out;
  height: 80px;
  border-radius: 4rem;
  margin: 2rem 0;
}

.mobile-nav {
  position: fixed; /* Keep ul positioned absolutely */
  top: 0;
  left: 0;
  margin: 0;
  background: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100vw;
  gap: 1rem;
  z-index: 500; /* Lower z-index to stay behind the icons */
  transform: translateX(100%);
  transition: transform 0.3s ease-in-out;
}
.mobile-nav.show {
  transform: translateX(0);
}
/* animate nav menu icon */
.nav-icon {
  width: 10vw;
  z-index: 10000; /* Higher z-index to stay on top */
  position: absolute; /* Use absolute positioning for icons */
  right: 1rem; /* Position icons on the right side */
  top: 1.5rem; /* Slight padding from top */
  cursor: pointer; /* Change cursor to pointer */
}
.nav-icon i {
  background-color: bisque;
  border-radius: 2px;
  content: "";
  display: block;
  width: 100%;
  height: 4px;
}
.nav-icon i:nth-child(1) {
  -webkit-animation: outT 0.8s backwards;
  animation: outT 0.8s backwards;
  -webkit-animation-direction: reverse;
  animation-direction: reverse;
}
.nav-icon i:nth-child(2) {
  margin: 5px 0;
  -webkit-animation: outM 0.8s backwards;
  animation: outM 0.8s backwards;
  -webkit-animation-direction: reverse;
  animation-direction: reverse;
}
.nav-icon i:nth-child(3) {
  -webkit-animation: outBtm 0.8s backwards;
  animation: outBtm 0.8s backwards;
  -webkit-animation-direction: reverse;
  animation-direction: reverse;
}

.nav-icon.active i:nth-child(1) {
  -webkit-animation: inT 0.8s forwards;
  animation: inT 0.8s forwards;
}
.nav-icon.active i:nth-child(2) {
  -webkit-animation: inM 0.8s forwards;
  animation: inM 0.8s forwards;
}
.nav-icon.active i:nth-child(3) {
  -webkit-animation: inBtm 0.8s forwards;
  animation: inBtm 0.8s forwards;
}
/* animated nav icon */
@-webkit-keyframes inM {
  50% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(45deg);
  }
}

@keyframes inM {
  50% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(45deg);
  }
}

@-webkit-keyframes outM {
  50% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(45deg);
  }
}

@keyframes outM {
  50% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(45deg);
  }
}

@-webkit-keyframes inT {
  0% {
    -webkit-transform: translateY(0px) rotate(0deg);
  }
  50% {
    -webkit-transform: translateY(9px) rotate(0deg);
  }
  100% {
    -webkit-transform: translateY(9px) rotate(135deg);
  }
}
/* ... */

